--- a/party-package-pre-made/index.html
+++ b/party-package-pre-made/index.html
@@ -1,153 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-<!-- META TAGS -->
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="robots" content="index,follow,noodp" />
-	<meta name="googlebot" content="index,follow" />
-	<meta name="google" content="nositelinkssearchbox" />
-	<meta name="google" content="notranslate" />
-	<meta name="keywords" content="Balloon Entertainer - Parties, Fairs, Fetes, Weddings, Markets, Store Openings, and any Special Occasion." />
-	<meta name="description" content="Book now with Blake's Balloons!" />
-	<meta name="subject" content="Book now with Blake's Balloons!" />
-	<meta name="abstract" content="Book now with Blake's Balloons!" />
-	<meta name="url" content="https://blakesballoons.com.au/booking-page" />
-	<meta property="og:title" content="Blake's Balloons | Booking Page" />
-	<meta property="og:url" content="https://blakesballoons.com.au/booking-page" />
-	<meta property="og:type" content="Website" />
-	<meta property="og:image" content="https://i.imgur.com/M1ZramU.jpg" />
-	<meta property="og:description" content="Book now with Blake's Balloons!" />
-	<meta name="twitter:title" content="Blake's Balloons | Booking Page" />
-	<meta name="twitter:card" content="Website" />
-	<meta name="twitter:image" content="https://i.imgur.com/M1ZramU.jpg" />
-	<meta name="twitter:description" content="Book now with Blake's Balloons!" />
-	<link rel="canonical" href="https://blakesballoons.com.au/booking-page" />
-<!-- ICONS -->
-	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/>
-	<title>Blake's Balloons | Booking Page</title>
-<!-- CSS STYLESHEETS -->
-
-	<link rel="stylesheet" type="text/css" href="css/index.css"/>
-<!-- JS / JQUERY -->
-	<!-- Disable Hover CSS on Touch Devices -->
-	<script src="../js/disablehovercssontouchdevices.js" type="text/javascript"></script>
-	<!-- Smooth Scrolling to Anchor -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="../js/smoothscrolltoanchor.js" type="text/javascript"></script>
-	<!-- Page Loader -->
-	<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="../js/pageloader.js" type="text/javascript"></script> -->
-</head>
-<body class="no-touch nojs">
-
-<!-- <div class="loader">
-</div> -->
-
-<section id="home">
-	<div class="layer">	
-		<header>
-			<div class="container">
-				<a href="#home">
-					<img src="../img/logo_blakesballoons.com.au_450x156.png" alt="Blake Davies"/>
-				</a>
-				<div class="inner">
-					<h2>Booking<br/> Page</h2>
-				</div>
-			</div>
-		</header>
-	</div>
-</section>
-
-<section id="contact">
-	<span id="contact-anchor" class="anchor"></span>
-	<div class="layer">
-		<div class="container">
-			<div class="wrapper">
-				<div class="box">
-					<p>Party Package<br/><span> (Pre-made)</span></p>
-					<p>$50</p>
-					<p>Up to 15 Balloon Characters<br/> + $4 per additional</p>
-					<p>Up to 15 Balloon Characters pre-made and dropped off at your party location!! Balloon Characters can be customised or left to Blake's discretion.</p>
-				</div>
-			</div>
-			<div class="wrapper">	
-				<div class="box">
-					<form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/a/blakedavies.net/forms/d/e/1FAIpQLSfouCHmAAmWgeSGyFOlvIMRhfqtKpfiaItIcqdxwZNZV63nuA/formResponse">
-						<div class="inner">
-							<input name="entry.1860077890" id="entry.1860077890" placeholder="Date Of Party" required>
-							<input name="entry.1256442828" id="entry.1256442828" placeholder="Time Of Party" required>
-							<input name="entry.2048917693" id="entry.2048917693" placeholder="# Of Party Guests" required>
-							<input name="entry.2060951219" id="entry.2060951219" placeholder="Party Address" required>
-							<input name="entry.764922599" id="entry.764922599" placeholder="Suburb" required>
-							<input name="entry.1295270579" id="entry.1295270579" placeholder="State" required>
-							<input name="entry.584442747" id="entry.584442747" placeholder="Postcode" required>
-							<textarea class="bump2" name="entry.1599744581" id="entry.1599744581" placeholder="Party Description" required></textarea>
-							<input name="entry.1725058677" id="entry.1725058677" placeholder="Primary Contact's Name" required>
-							<input name="entry.340750664" id="entry.340750664" placeholder="Primary Contact's Email" required>
-							<input name="entry.1727008829" id="entry.1727008829" placeholder="Primary Contact's Phone" required>
-							<input class="bump2" name="entry.911346679" id="entry.911346679" placeholder="Primary Contact's Mobile" required>
-							<input name="entry.1276787952" id="entry.1276787952" placeholder="Email" type="email" />
-						</div>
-						<input class="submit" name="submit" type="submit" value="Submit Form">
-					</form>
-					<script src="js/contactform.js" type="text/javascript"></script>
-				</div>
-			</div>
-
-		</div>
-	</div>
-</section>
-
-<section id="footer">
-	<footer>
-		<div class="layer">
-			<div class="container">
-				<div class="wrapper">
-					<div class="box">
-						<a href="#home">
-							<img src="../img/logo_blakesballoons.com.au_450x156.png" alt="Blake's Balloons"/>
-						</a>
-					</div>
-					<div class="box">
-						<p>0475 065 444</p>
-						<p>blake<span>@</span>blakesballoons.com.au</p>
-					</div>
-					<div class="box">
-						<div class="inner">
-							<a href="https://www.facebook.com/blakesballoons/" target="blank">
-								<img src="../img/facebook_icon.png" alt="Blake's Balloons"/>
-							</a>
-						</div>
-						<div class="inner">
-							<a href="https://www.instagram.com/blakesballoons/" target="blank">
-								<img src="../img/instagram_icon.png" alt="Blake's Balloons"/>
-							</a>
-						</div>
-						<div class="inner">
-							<a href="https://twitter.com/blakesballoons/" target="blank">
-								<img src="../img/twitter_icon.png" alt="Blake's Balloons"/>
-							</a>
-						</div>
-					</div>
-					<div class="box">
-						<p><span>&#169</span>2018 Blake's Balloons</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<a href="https://blakedavies.net" target="blank">
-			<div class="layer powered-by">
-				<div class="container powered-by">
-					<p>Website built & powered by</p>
-					<img src="../img/logo_blakedavies.net_50x50.png" alt="Blake Davies"/>
-					<p>Blake Davies</p>
-					<p>&#169 2017 Blake Davies. All Rights Reserved.</p>
-				</div>
-			</div>
-		</a>
-	</footer>
-</section>
-
-</body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="robots" content="index,follow,noodp" /><meta name="googlebot" content="index,follow" /><meta name="google" content="nositelinkssearchbox" /><meta name="google" content="notranslate" /><meta name="keywords" content="Balloon Entertainer - Parties, Fairs, Fetes, Weddings, Markets, Store Openings, and any Special Occasion." /><meta name="description" content="Book now with Blake's Balloons!" /><meta name="subject" content="Book now with Blake's Balloons!" /><meta name="abstract" content="Book now with Blake's Balloons!" /><meta name="url" content="https://blakesballoons.com.au/booking-page" /><meta property="og:title" content="Blake's Balloons | Booking Page" /><meta property="og:url" content="https://blakesballoons.com.au/booking-page" /><meta property="og:type" content="Website" /><meta property="og:image" content="https://i.imgur.com/M1ZramU.jpg" /><meta property="og:description" content="Book now with Blake's Balloons!" /><meta name="twitter:title" content="Blake's Balloons | Booking Page" /><meta name="twitter:card" content="Website" /><meta name="twitter:image" content="https://i.imgur.com/M1ZramU.jpg" /><meta name="twitter:description" content="Book now with Blake's Balloons!" /><link rel="canonical" href="https://blakesballoons.com.au/booking-page" /><link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/><title>Blake's Balloons | Booking Page</title><link rel="stylesheet" type="text/css" href="css/index.css"/> <script src="../js/disablehovercssontouchdevices.js" type="text/javascript"></script> <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> <script src="../js/smoothscrolltoanchor.js" type="text/javascript"></script> <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> <script src="../js/pageloader.js" type="text/javascript"></script> </head><body class="no-touch nojs"><div class="loader"></div><section id="home"><div class="layer"> <header><div class="container"> <a href="#home"> <img src="../img/logo_blakesballoons.com.au_450x156.png" alt="Blake Davies"/> </a><div class="inner"><h2>Booking<br/> Page</h2></div></div> </header></div> </section><section id="contact"> <span id="contact-anchor" class="anchor"></span><div class="layer"><div class="container"><div class="wrapper"><div class="box"><p>Party Package<br/><span> (Pre-made)</span></p><p>$50</p><p>Up to 15 Balloon Characters<br/> + $4 per additional</p><p>Up to 15 Balloon Characters pre-made and dropped off at your party location!! Balloon Characters can be customised or left to Blake's discretion.</p></div></div><div class="wrapper"><div class="box"><form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/a/blakedavies.net/forms/d/e/1FAIpQLSfouCHmAAmWgeSGyFOlvIMRhfqtKpfiaItIcqdxwZNZV63nuA/formResponse"><div class="inner"> <input name="entry.1860077890" id="entry.1860077890" placeholder="Date Of Party" required> <input name="entry.1256442828" id="entry.1256442828" placeholder="Time Of Party" required> <input name="entry.2048917693" id="entry.2048917693" placeholder="# Of Party Guests" required> <input name="entry.2060951219" id="entry.2060951219" placeholder="Party Address" required> <input name="entry.764922599" id="entry.764922599" placeholder="Suburb" required> <input name="entry.1295270579" id="entry.1295270579" placeholder="State" required> <input name="entry.584442747" id="entry.584442747" placeholder="Postcode" required><textarea class="bump2" name="entry.1599744581" id="entry.1599744581" placeholder="Party Description" required></textarea><input name="entry.1725058677" id="entry.1725058677" placeholder="Primary Contact's Name" required> <input name="entry.340750664" id="entry.340750664" placeholder="Primary Contact's Email" required> <input name="entry.1727008829" id="entry.1727008829" placeholder="Primary Contact's Phone" required> <input class="bump2" name="entry.911346679" id="entry.911346679" placeholder="Primary Contact's Mobile" required> <input name="entry.1276787952" id="entry.1276787952" placeholder="Email" type="email" /></div> <input class="submit" name="submit" type="submit" value="Submit Form"></form> <script src="js/contactform.js" type="text/javascript"></script> </div></div></div></div> </section><section id="footer"> <footer><div class="layer"><div class="container"><div class="wrapper"><div class="box"> <a href="#home"> <img src="img/logo_blakesballoons.com.au_450x156.png" alt="Blake's Balloons"/> </a></div><div class="box"><p>0475 065 444</p><p>blake<span>@</span>blakesballoons.com.au</p><p>&#9658; Brisbane QLD</p></div><div class="box"><div class="inner"> <a href="https://www.facebook.com/blakesballoons/" target="blank"> <img src="img/facebook_icon.png" alt="Blake's Balloons"/> </a></div><div class="inner"> <a href="https://www.instagram.com/blakesballoons/" target="blank"> <img src="img/instagram_icon.png" alt="Blake's Balloons"/> </a></div><div class="inner"> <a href="https://twitter.com/blakesballoons/" target="blank"> <img src="img/twitter_icon.png" alt="Blake's Balloons"/> </a></div></div><div class="box"><p><span>&#169</span>2018 Blake's Balloons</p></div></div></div></div> <a href="https://blakedavies.net" target="blank"><div class="layer powered-by"><div class="container powered-by"><p>Website built & powered by</p> <img src="img/logo_blakedavies.net_50x50.png" alt="Blake Davies"/><p>Blake Davies</p><p>&#169 2017 Blake Davies. All Rights Reserved.</p></div></div> </a> </footer> </section></body></html>
