--- a/event-decoration/index.html
+++ b/event-decoration/index.html
@@ -1,152 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-<!-- META TAGS -->
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="robots" content="index,follow,noodp" />
-	<meta name="googlebot" content="index,follow" />
-	<meta name="google" content="nositelinkssearchbox" />
-	<meta name="google" content="notranslate" />
-	<meta name="keywords" content="Balloon Entertainer - Parties, Fairs, Fetes, Weddings, Markets, Store Openings, and any Special Occasion." />
-	<meta name="description" content="Book now with Blake's Balloons!" />
-	<meta name="subject" content="Book now with Blake's Balloons!" />
-	<meta name="abstract" content="Book now with Blake's Balloons!" />
-	<meta name="url" content="https://blakesballoons.com.au/booking-page" />
-	<meta property="og:title" content="Blake's Balloons | Booking Page" />
-	<meta property="og:url" content="https://blakesballoons.com.au/booking-page" />
-	<meta property="og:type" content="Website" />
-	<meta property="og:image" content="https://i.imgur.com/M1ZramU.jpg" />
-	<meta property="og:description" content="Book now with Blake's Balloons!" />
-	<meta name="twitter:title" content="Blake's Balloons | Booking Page" />
-	<meta name="twitter:card" content="Website" />
-	<meta name="twitter:image" content="https://i.imgur.com/M1ZramU.jpg" />
-	<meta name="twitter:description" content="Book now with Blake's Balloons!" />
-	<link rel="canonical" href="https://blakesballoons.com.au/booking-page" />
-<!-- ICONS -->
-	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/>
-	<title>Blake's Balloons | Booking Page</title>
-<!-- CSS STYLESHEETS -->
-
-	<link rel="stylesheet" type="text/css" href="css/index.css"/>
-<!-- JS / JQUERY -->
-	<!-- Disable Hover CSS on Touch Devices -->
-	<script src="../js/disablehovercssontouchdevices.js" type="text/javascript"></script>
-	<!-- Smooth Scrolling to Anchor -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="../js/smoothscrolltoanchor.js" type="text/javascript"></script>
-	<!-- Page Loader -->
-	<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="../js/pageloader.js" type="text/javascript"></script> -->
-</head>
-<body class="no-touch nojs">
-
-<!-- <div class="loader">
-</div> -->
-
-<section id="home">
-	<div class="layer">	
-		<header>
-			<div class="container">
-				<a href="#home">
-					<img src="../img/logo_blakesballoons.com.au_450x156.png" alt="Blake Davies"/>
-				</a>
-				<div class="inner">
-					<h2>Booking<br/> Page</h2>
-				</div>
-			</div>
-		</header>
-	</div>
-</section>
-
-<section id="contact">
-	<span id="contact-anchor" class="anchor"></span>
-	<div class="layer">
-		<div class="container">
-			<div class="wrapper">
-				<div class="box">
-					<p>Event Decoration<br/><span> (To be quoted)</span></p>
-					<p>$65<span>+</span></p>
-					<p>Brighten up any venue with custom balloons!! Blake can pre-make balloons to be dropped off at your venue and even help with the layout and placements of the balloons. Decoration options include traditional balloon characters, balloon streamers, and regular balloons in any combination.</p>
-				</div>
-			</div>
-			<div class="wrapper">	
-				<div class="box">
-					<form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/a/blakedavies.net/forms/d/e/1FAIpQLScjL0BHgHEuaKDa_kx9pbHK6E6qlMAXdhTRGQOmIHVJvFANZw/formResponse">
-						<div class="inner">
-							<input name="entry.1735602378" id="entry.1735602378" placeholder="Date Of Event" required>
-							<input name="entry.1988571955" id="entry.1988571955" placeholder="Time Of Event" required>
-							<input name="entry.1550051757" id="entry.1550051757" placeholder="# Of Attendees" required>
-							<input name="entry.492593392" id="entry.492593392" placeholder="Event Address" required>
-							<input name="entry.1686148476" id="entry.1686148476" placeholder="Suburb" required>
-							<input name="entry.437453953" id="entry.437453953" placeholder="State" required>
-							<input name="entry.2019427710" id="entry.2019427710" placeholder="Postcode" required>
-							<textarea class="bump2" name="entry.318701112" id="entry.318701112" placeholder="Event Description" required></textarea>
-							<input name="entry.253191495" id="entry.253191495" placeholder="Primary Contact's Name" required>
-							<input name="entry.1707968936" id="entry.1707968936" placeholder="Primary Contact's Email" required>
-							<input name="entry.1384680913" id="entry.1384680913" placeholder="Primary Contact's Phone" required>
-							<input class="bump2" name="entry.461776980" id="entry.461776980" placeholder="Primary Contact's Mobile" required>
-							<input name="entry.2131551234" id="entry.2131551234" placeholder="Email" type="email" />
-						</div>
-						<input class="submit" name="submit" type="submit" value="Submit Form">
-					</form>
-					<script src="js/contactform.js" type="text/javascript"></script>
-				</div>
-			</div>
-
-		</div>
-	</div>
-</section>
-
-<section id="footer">
-	<footer>
-		<div class="layer">
-			<div class="container">
-				<div class="wrapper">
-					<div class="box">
-						<a href="#home">
-							<img src="../img/logo_blakesballoons.com.au_450x156.png" alt="Blake's Balloons"/>
-						</a>
-					</div>
-					<div class="box">
-						<p>0475 065 444</p>
-						<p>blake<span>@</span>blakesballoons.com.au</p>
-					</div>
-					<div class="box">
-						<div class="inner">
-							<a href="https://www.facebook.com/blakesballoons/" target="blank">
-								<img src="../img/facebook_icon.png" alt="Blake's Balloons"/>
-							</a>
-						</div>
-						<div class="inner">
-							<a href="https://www.instagram.com/blakesballoons/" target="blank">
-								<img src="../img/instagram_icon.png" alt="Blake's Balloons"/>
-							</a>
-						</div>
-						<div class="inner">
-							<a href="https://twitter.com/blakesballoons/" target="blank">
-								<img src="../img/twitter_icon.png" alt="Blake's Balloons"/>
-							</a>
-						</div>
-					</div>
-					<div class="box">
-						<p><span>&#169</span>2018 Blake's Balloons</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<a href="https://blakedavies.net" target="blank">
-			<div class="layer powered-by">
-				<div class="container powered-by">
-					<p>Website built & powered by</p>
-					<img src="../img/logo_blakedavies.net_50x50.png" alt="Blake Davies"/>
-					<p>Blake Davies</p>
-					<p>&#169 2017 Blake Davies. All Rights Reserved.</p>
-				</div>
-			</div>
-		</a>
-	</footer>
-</section>
-
-</body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="robots" content="index,follow,noodp" /><meta name="googlebot" content="index,follow" /><meta name="google" content="nositelinkssearchbox" /><meta name="google" content="notranslate" /><meta name="keywords" content="Balloon Entertainer - Parties, Fairs, Fetes, Weddings, Markets, Store Openings, and any Special Occasion." /><meta name="description" content="Book now with Blake's Balloons!" /><meta name="subject" content="Book now with Blake's Balloons!" /><meta name="abstract" content="Book now with Blake's Balloons!" /><meta name="url" content="https://blakesballoons.com.au/booking-page" /><meta property="og:title" content="Blake's Balloons | Booking Page" /><meta property="og:url" content="https://blakesballoons.com.au/booking-page" /><meta property="og:type" content="Website" /><meta property="og:image" content="https://i.imgur.com/M1ZramU.jpg" /><meta property="og:description" content="Book now with Blake's Balloons!" /><meta name="twitter:title" content="Blake's Balloons | Booking Page" /><meta name="twitter:card" content="Website" /><meta name="twitter:image" content="https://i.imgur.com/M1ZramU.jpg" /><meta name="twitter:description" content="Book now with Blake's Balloons!" /><link rel="canonical" href="https://blakesballoons.com.au/booking-page" /><link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/><title>Blake's Balloons | Booking Page</title><link rel="stylesheet" type="text/css" href="css/index.css"/> <script src="../js/disablehovercssontouchdevices.js" type="text/javascript"></script> <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> <script src="../js/smoothscrolltoanchor.js" type="text/javascript"></script> <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> <script src="../js/pageloader.js" type="text/javascript"></script> </head><body class="no-touch nojs"><div class="loader"></div><section id="home"><div class="layer"> <header><div class="container"> <a href="#home"> <img src="../img/logo_blakesballoons.com.au_450x156.png" alt="Blake Davies"/> </a><div class="inner"><h2>Booking<br/> Page</h2></div></div> </header></div> </section><section id="contact"> <span id="contact-anchor" class="anchor"></span><div class="layer"><div class="container"><div class="wrapper"><div class="box"><p>Event Decoration<br/><span> (To be quoted)</span></p><p>$65<span>+</span></p><p>Brighten up any venue with custom balloons!! Blake can pre-make balloons to be dropped off at your venue and even help with the layout and placements of the balloons. Decoration options include traditional balloon characters, balloon streamers, and regular balloons in any combination.</p></div></div><div class="wrapper"><div class="box"><form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/a/blakedavies.net/forms/d/e/1FAIpQLScjL0BHgHEuaKDa_kx9pbHK6E6qlMAXdhTRGQOmIHVJvFANZw/formResponse"><div class="inner"> <input name="entry.1735602378" id="entry.1735602378" placeholder="Date Of Event" required> <input name="entry.1988571955" id="entry.1988571955" placeholder="Time Of Event" required> <input name="entry.1550051757" id="entry.1550051757" placeholder="# Of Attendees" required> <input name="entry.492593392" id="entry.492593392" placeholder="Event Address" required> <input name="entry.1686148476" id="entry.1686148476" placeholder="Suburb" required> <input name="entry.437453953" id="entry.437453953" placeholder="State" required> <input name="entry.2019427710" id="entry.2019427710" placeholder="Postcode" required><textarea class="bump2" name="entry.318701112" id="entry.318701112" placeholder="Event Description" required></textarea><input name="entry.253191495" id="entry.253191495" placeholder="Primary Contact's Name" required> <input name="entry.1707968936" id="entry.1707968936" placeholder="Primary Contact's Email" required> <input name="entry.1384680913" id="entry.1384680913" placeholder="Primary Contact's Phone" required> <input class="bump2" name="entry.461776980" id="entry.461776980" placeholder="Primary Contact's Mobile" required> <input name="entry.2131551234" id="entry.2131551234" placeholder="Email" type="email" /></div> <input class="submit" name="submit" type="submit" value="Submit Form"></form> <script src="js/contactform.js" type="text/javascript"></script> </div></div></div></div> </section><section id="footer"> <footer><div class="layer"><div class="container"><div class="wrapper"><div class="box"> <a href="#home"> <img src="img/logo_blakesballoons.com.au_450x156.png" alt="Blake's Balloons"/> </a></div><div class="box"><p>0475 065 444</p><p>blake<span>@</span>blakesballoons.com.au</p><p>&#9658; Brisbane QLD</p></div><div class="box"><div class="inner"> <a href="https://www.facebook.com/blakesballoons/" target="blank"> <img src="img/facebook_icon.png" alt="Blake's Balloons"/> </a></div><div class="inner"> <a href="https://www.instagram.com/blakesballoons/" target="blank"> <img src="img/instagram_icon.png" alt="Blake's Balloons"/> </a></div><div class="inner"> <a href="https://twitter.com/blakesballoons/" target="blank"> <img src="img/twitter_icon.png" alt="Blake's Balloons"/> </a></div></div><div class="box"><p><span>&#169</span>2018 Blake's Balloons</p></div></div></div></div> <a href="https://blakedavies.net" target="blank"><div class="layer powered-by"><div class="container powered-by"><p>Website built & powered by</p> <img src="img/logo_blakedavies.net_50x50.png" alt="Blake Davies"/><p>Blake Davies</p><p>&#169 2017 Blake Davies. All Rights Reserved.</p></div></div> </a> </footer> </section></body></html>
